@@ -1,0 +1,9 @@
+<div class="mtl">
+	<label for="g1">Group picker input (.elgg-group-picker):</label>
+	<?php
+		echo elgg_view("input/grouppicker", array(
+			"name" => "g1",
+			"id" => "g1",
+		));
+	?>
+</div>
