@@ -5,6 +5,7 @@ x.x:
 
 - changes for Elgg 1.9
 - added: group tool presets
+- added: grouppicker autocomplete
 
 x.x:
 
